Alice and cheshire cat

--- a/class_material6.html
+++ b/class_material6.html
@@ -14,7 +14,7 @@
 }
 
 .backdrop {
-    background: url("alice.jpg") center;
+    background: url("makingchoice.jpg") center;
      background-size: contain;
      
     margin: auto;
