--- a/class_material5.html
+++ b/class_material5.html
@@ -74,7 +74,11 @@
 
                printWhereAliceWantedToGo.innerHTML="Staying with my cat";
 
-        }else {
+        } else if( choiceMadeByAliceInt == 3){
+
+               printWhereAliceWantedToGo.innerHTML="Bracket is working";
+
+        else {
 
               printWhereAliceWantedToGo.innerHTML="Not following white rabbit";
         }
