Changing label of button

--- a/class_material2.html
+++ b/class_material2.html
@@ -55,7 +55,7 @@
 <body>
 
   
-   <button onclick="buttonClick()">Generate Random Number</button>
+   <button onclick="buttonClick()">Generate Random Number For New Developers</button>
    <div id="showCount"></div>
    <button onclick="showRandomNumber()">Print Random Number</button>
     <div id="printRandomArr"></div>
